# learning-burn

./: .gitignore  Cargo.toml  README.md  pytest.ini
.github/: FUNDING.yml
book-tests/: Cargo.toml
book-tests/examples/: ch0_04_vectors_and_iterators.rs  ch0_05_structs_and_methods.rs  ch0_06_enums_and_option.rs  ch0_07_result_and_errors.rs  ch0_09_generics.rs  ch10_01_chain_rule.rs  ch10_02_two_layer_backprop.rs  ch10_03_xor_mlp.rs  ch13_01_save_load_inference.rs  ch13_02_recorder_formats.rs  ch2_01_arithmetic.rs  ch2_03_reshaping_slicing.rs  ch2_04_reductions.rs  ch2_05_standardize_features.rs  ch2_06_elementwise_masking.rs  ch3_01_matmul.rs  ch3_02_transpose_matvec_outer.rs  ch3_03_structured_and_batched.rs  ch3_04_linear_layer.rs  ch4_01_vector_norm.rs  ch4_02_gram_matrix.rs  ch7_02_saturating.rs  ch8_02_cross_entropy.rs
candle-inference/: Cargo.toml
candle-inference/examples/: ch15_01_tensors.rs  ch15_02_linear_forward.rs  ch15_03_mlp_softmax.rs
candle-inference/src/: lib.rs
examples/chapter01/e01_rank_vs_shape/: README.md  python.py  rust.rs
examples/chapter01/e02_basic_creation/: README.md  python.py  rust.rs
examples/chapter01/e03_int_tensors/: README.md  python.py  rust.rs
examples/chapter01/e03_integer_tensors/: README.md
examples/chapter01/e04_filled_structured/: README.md  python.py  rust.rs
examples/chapter01/e04_tensors_filled_with_known_values/: README.md
examples/chapter01/e05_random_tensors/: README.md  python.py  rust.rs
examples/chapter01/e05_random_tensors_from_two_distributions/: README.md
examples/chapter01/e06_a_tensor_from_your_own_struct/: README.md
examples/chapter01/e06_from_custom_type/: README.md  python.py  rust.rs
examples/chapter01/e07_getting_your_numbers_back_out/: README.md
examples/chapter01/e07_tensor_data_bridge/: README.md  python.py  rust.rs
examples/chapter01/e08_min_max_normalisation/: README.md
examples/chapter01/e08_ownership_cloning/: README.md  python.py  rust.rs
examples/chapter01/e09_display_and_closeness/: README.md  python.py  rust.rs
examples/chapter01/e09_printing_and_comparing_tensors_safely/: README.md
examples/chapter02/e01_element_wise_arithmetic/: README.md
examples/chapter02/e02_broadcasting_with_unsqueeze/: README.md
examples/chapter02/e03_reshape_flatten_slice/: README.md
examples/chapter02/e04_reductions_sum_mean_max/: README.md
examples/chapter02/e05_standardising_features/: README.md
examples/chapter02/e06_maths_clamp_mask/: README.md
examples/chapter03/e01_matrix_multiplication/: README.md
examples/chapter03/e02_transpose/: README.md
examples/chapter03/e02_transpose_matrix_vector_outer_product/: README.md
examples/chapter03/e03_identity_triangular_masks_trace/: README.md
examples/chapter04/e01_vector_norm/: README.md  (+2 more)
python-examples/: ch1_01_basic_creation.py  ch1_02_filled_structured.py  ch1_03_random_tensors.py  ch1_04_ownership_cloning.py  ch2_01_arithmetic.py  ch2_02_broadcasting.py  ch2_03_reshaping_slicing.py  ch2_04_reductions.py  ch2_05_standardize_features.py  ch2_06_elementwise_masking.py
rust-examples/examples/: ch0_01_variables_and_types.rs  ch0_02_ownership_and_move.rs  ch0_03_borrowing.rs  ch0_08_traits.rs  ch0_09_generics.rs  ch1_02_basic_creation.rs  ch1_05_random_tensors.rs  ch2_02_broadcasting.rs  ch2_03_reshaping_slicing.rs  ch2_04_reductions.rs  ch2_05_standardize_features.rs  ch3_03_structured_and_batched.rs  ch4_02_gram_matrix.rs  ch5_01_backward_gradient.rs  ch5_02_gradient_container.rs  ch5_03_inner_inference.rs  ch6_01_gradient_descent.rs  ch6_02_autodiff_gradient.rs  ch7_01_relu_family.rs  ch7_03_softmax.rs  ch8_02_cross_entropy.rs  ch9_01_sgd_training.rs
src/: main.rs
(+187 files in other folders)
